# colortilt

./: .gitignore  CMakeLists.txt  README.md  exp.cc  exp.h  flicker.cc  info.cc  main.cc  rndgen.cc  scene.cc  scene.h  stimgen.cc  stimulus.cc  stimulus.h
analysis/: ct-N.py  ct-ana.py  ct-chi2.py  ct-cm.py  ct-cmpold.py  ct-conv.py  ct-cval.py  ct-export.py  ct-filter.py  ct-import.py  ct-load.py  ct-order.py  ct-plot.py  ct-ratio.py  ct-scat.py  ct-sizerel.py  ct-slope.py  ct-spread.py  ct-szdiff.py  ct-ver.py  make_plots.sh  paper.sh  utils.py
analysis/colortilt/: __init__.py  core.py  ellipse.py  io.py  plot.py  styles.py
data/: 4_2779411594.rnd  4_3991753538.rnd  64_1645413394.rnd  64_2064247565.rnd  64_3340563314.rnd  64_4288389797.rnd  colortilt.experiment  off_off_10_lr.stm  off_off_160_lr.stm  on_off_10_lr.stm  on_off_160_lr.stm  template.sessions  test.sessions  test.stm
